@@ -91,7 +91,7 @@ sub gather_file_travis_yml
                           q{install:},
                           q{  - cpanm -n Dist::Zilla},
                           q{  - dzil authordeps --missing | cpanm -n},
-                          q{  - cpanm -n Pod::Find Test::CPAN::Changes Test::EOL Test::Fixme Test::NoTabs Test::Pod::Spelling::CommonMistakes Test::Spelling Test::Strict Test::Version Test::Vars || true},
+                          q{  - cpanm -n Pod::Find Test::CPAN::Changes Test::EOL Test::Fixme Test::NoTabs Test::Pod::Spelling::CommonMistakes Test::Spelling Test::Strict Test::Version || true},
                           q{#  - cpanm -n Foo::Bar},
                           q{},
                           q{perl:},
